#add_executable(cfcat cfcat.c)
#add_executable(cfchattr cfchattr.c)
#add_executable(cfchcon cfchcon.c)
#add_executable(cfchgrp cfchgrp.c)
#add_executable(cfchown cfchown.c)
#add_executable(chchmod chchmod.c)
#add_executable(cfcp cfcp.c)
#add_executable(cfdd cfdd.c)
#add_executable(cfdir cfdir.c)
#add_executable(cfdu cfdu.c)
#add_executable(cffile cffile.c)
#add_executable(cffind cffind.c)
#add_executable(cflocate cflocate.c)
#add_executable(cflink cflink.c)
#add_executable(cfln cfln.c)
#add_executable(cfls cfls.c)
#add_executable(cfmkdir cfmkdir.c)
#add_executable(cfmktemp cfmktemp.c)
#add_executable(cfmv cfmv.c)
#add_executable(cfreadlink cfreadlink.c)
#add_executable(cfrealpath cfrealpath.c)
#add_executable(cfrm cfrm.c)
#add_executable(cfrmdir cfrmdir.c)
#add_executable(cfshell cfshell.c)
#add_executable(cfstat cfstat.c)
#add_executable(cftail cftail.c)
#add_executable(cftouch cftouch.c)
#add_executable(cftruncate cftruncate.c)
#add_executable(cfunlink cfunlink.c)
#add_executable(cfvdir cfvdir.c)

# Necessary?
#add_executable(cfbasename) # TODO Verify basename URL
#add_executable(cfdirname) # TODO Verify dirname URL
#add_executable(cfpathchk)
