add_executable(cfls)
add_executable(cfcp)
add_executable(cfrm)
add_executable(cfmv)
add_executable(cfchattr)
add_executable(cfmkdir)
add_executable(cfrmdir)
add_executable(cffile)
add_executable(cfcat)

add_executable(cflocate)
add_executable(cfchmod) 
add_executable(cffind)
add_executable(cfgrep)

add_executable(cfshell)
